# mobile_planner

./: .gitignore  CMakeLists.txt  README.md
assets/: room_sparse.ply
cmake/: dependencies.cmake
config/: config.yaml
include/mobile_planner/: elevation_map.h  grid_map.h  mobile_planner.h  point_cloud_process.h
python/: elevation_mapping_direct.py  elevation_mapping_full_gaussian.py  gp1d.py  gp2d.py  svgp1d.py  visualize_binary_maps.py  visualize_map_path.py
src/: elevation_map.cpp  grid_map.cpp  mobile_planner.cpp  point_cloud_process.cpp
test/: test_map_plan_static.cpp  test_mapping_static.cpp
